@@ -112,8 +112,17 @@ public class BannerScanner {
                 localBannerFile = FileTools.findFileFromExtensions(fullBannerFilename, bannerExtensions);
                 foundLocalBanner = localBannerFile.exists();
 
-                if (foundLocalBanner) {
-                	break;
+                if (!foundLocalBanner && movie.isTVShow()) {
+                    // Get the parent directory and check that
+                    fullBannerFilename = FileTools.getParentFolder(movie.getFile().getParentFile().getParentFile()) + File.separator + fanartFilename;
+                    System.out.println("SCANNER: " + fullBannerFilename);
+                    localBannerFile = FileTools.findFileFromExtensions(fullBannerFilename, bannerExtensions);
+                    foundLocalBanner = localBannerFile.exists();
+                    if (foundLocalBanner) {
+                        break;   // We found the artwork so quit the loop
+                    }
+                } else {
+                    break;    // We found the artwork so quit the loop
                 }
         	}
         }
